<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:id="@+id/constraintlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btna"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"



        android:text="@string/button1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />

    <Button
        android:id="@+id/btnb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btna"

        app:layout_constraintStart_toStartOf="@+id/btna"
        app:layout_constraintTop_toBottomOf="@+id/btna"/>


    <Button
        android:id="@+id/btnc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/c"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/btna"
        app:layout_constraintStart_toEndOf="@+id/btna"
        />
</androidx.constraintlayout.widget.ConstraintLayout>